--- a/JobApplicationTracker.Server/Properties/launchSettings.json
+++ b/JobApplicationTracker.Server/Properties/launchSettings.json
@@ -9,7 +9,7 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5014"
+      "applicationUrl": "https://localhost:7056;http://localhost:5014"
     },
     "https": {
       "commandName": "Project",
